添加云函数

--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,6 @@
 {
-	"description": "项目配置文件。",
+  "miniprogramRoot": "miniprogram/",
+  "cloudfunctionRoot": "cloudfunctions/",
 	"packOptions": {
 		"ignore": []
 	},
@@ -11,7 +12,7 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.9",
+	"libVersion": "2.4.2",
 	"appid": "wx4bbad1749485de8a",
 	"projectname": "notes",
 	"isGameTourist": false,
