--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,7 @@
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
+    "navigationBarBackgroundColor": "#FFFFFF",
     "navigationBarTitleText": "TT便签",
     "navigationBarTextStyle": "black"
   },
